# etf-trading-projects

./: CLAUDE.md  Guideline.md  docker-compose.yml  run.py  tv_full_snapshot.md  문제점.md
.claude/hooks/: check-no-dummy-data.sh
docs/: lab_meeting_4_15.md  ppt_prompt_4_15.md
docx/: Goal.md  MULTI_AI_REQUIREMENTS.md  PROJECT_GUIDE.md  PROJECT_TUTORIAL.md  PROMPT_BACKTEST_RANK_RETURNS.md  PROMPT_DATA_COLLECTION_IMPROVEMENT.md  PROMPT_EXAMPLE_COMMUNITY.md
docx/rule/: choi_inhoon_regression.md  git_guide.md  git_rule.md  lim_daeyoon_scenario.md  park_sungmoon_scraper.md  (+2 more)
nginx/: nginx.conf
scraper-service/: DATA_PIPELINE_ISSUES.md  Dockerfile  pyproject.toml
scraper-service/app/: config.py  main.py
scraper-service/app/features/data_providers/: mysql_provider.py
scraper-service/app/models/: task_info.py
scraper-service/app/routers/: edgar.py  features.py  jobs.py  market_data.py
scraper-service/app/services/: db_service.py  edgar_service.py  market_data_service.py  processed_db_service.py  scraper.py
scraper-service/config/: symbol_loader.py  symbols.yaml
scraper-service/cookies/: cookies.json
scraper-service/scripts/: clean_price_anomalies.py  edgar_size_estimate.py  edgar_verify_parsing.py  migrate_pk.py  tradingview_playwright_scraper_upload.py
scripts/: alert-on-errors.sh  post-trade-check.sh  run-pipeline.sh  test.ipynb  test_google_genai.ipynb  train-monthly.sh  train-yearly.sh  validate_data.py
trading-monitor/: Dockerfile  components.json  middleware.ts  next.config.ts  package-lock.json  package.json
trading-service/: AGENTS.md
(+111 files in other folders)
