[tool.poetry]
package-mode = false
name = "scraper-service"
version = "0.1.0"
description = "TradingView data scraping service with FastAPI"
authors = ["ahnbi2"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# FastAPI
fastapi = ">=0.109.0"
uvicorn = {version = ">=0.27.0", extras = ["standard"]}
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
filelock = ">=3.13.0"
# Scraping
playwright = "^1.40.0"
# Data processing
pandas = "^2.0.0"
numpy = ">=1.24.0"
# Database
sqlalchemy = "^2.0.0"
pymysql = "^1.1.0"
sshtunnel = "^0.4.0"
paramiko = ">=2.0,<3"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
# Corporate actions & feature processing
yfinance = "^1.1.0"
pandas-ta = ">=0.3.14b0"
fredapi = ">=0.5.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
